# anomaly-detection-public

./: .gitignore  README.md  pyproject.toml  recreate_rd4ad.sh  setup.sh  start_mlflow.txt
docs/: 00_project_proposal.md  10_goal_1.md  10_goal_2.md  10_goal_3.md
experiments/anomaly_clfs/: train_backbones_for_condition_clfs.sh  train_backbones_for_scavport_clfs.sh
experiments/backbones/: train_scavport_backbones.sh  train_vesselarchive_backbones.sh
experiments/custom/: patchcore_1_patchsize.sh  patchcore_1_patchsize_condition-lock.sh  patchcore_1_patchsize_condition-overview.sh  patchcore_agg_func.sh  patchcore_patchsize.sh  scavport_from_scratch.sh  vesselarchive_from_scratch.sh
src/SupContrast/: losses.py
src/SupContrast/networks/: resnet_big.py
src/anomaly_detection/: __init__.py  __main__.py  config.py  eval.py  eval_summary.py  mlflow_summary.py  model_builder.py  models.py  numpy_to_pil.py  params.py  util.py
src/anomaly_detection/one_time_scripts/: add_missing_optuna.py  check_nodups_mlflow.py  copy_from_s3.py  copy_to_s3.py  count_ds.py  delete_mlflow_runs.py  download_condition.py  download_dimo.py
src/dimo/scripts/: dimo_viewer.ipynb
src/patchcore-inspection/: .gitignore  local_run_test.sh  pyproject.toml  sample_evaluation.sh  sample_training.sh  x_condition_evaluation.sh  x_condition_training.sh
src/patchcore-inspection/src/patchcore/: backbones.py  patchcore.py  utils.py
src/patchcore-inspection/src/patchcore/datasets/: condition_ds.py  mvtec.py
src/rd4ad/: .gitignore  _modules.py  main.py  resnet_models.py  test.py
