[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patchcore"
version = "0.1.0"
description = ''
requires-python = ">=3.10"
authors = [
  { name = "christoffer.sommerlund", email = "christoffer.sommerlund@man-es.com" },
]

dependencies = [
  "timm",
  "click>= 8.0.3",
  # "cudatoolkit>= 10.2",
  # "faiss-cpu",
  "faiss-gpu",
  "matplotlib>= 3.5.0",
  "pillow>= 8.4.0",
  "pretrainedmodels>= 0.7.4",
  "torch>= 1.10.0",
  "scikit-image>= 0.18.3",
  "scikit-learn>= 1.0.1",
  "scipy>= 1.7.1",
  "torchvision>= 0.11.1",
  "tqdm>= 4.62.3",
  "opencv-python",

]

[project.optional-dependencies]
dev = ["isort>=5.10.1", "pytest>=6.2.5", "ruff", "pre-commit", "boto3-stubs"]
ipy = ["ipywidgets", "ipykernel", "jupyter", "jupyter_bokeh"]
app = ["holoviews", "hvplot", "panel"]
